k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubbops
  labels:
    name: hubbops
    app.kubernetes.io/name: hubbops-platform
